ng2-components/ng2-activiti-analytics/src/components/analytics-report-list.component.scss
@mixin mat-analytics-report-list-theme($theme) {
    $primary: map-get($theme, primary);

    .adf-analytics-report-list {

        .activiti-filters__entry {
            cursor: pointer;
        }

        .activiti-filters__entry-icon {
            position: relative;
            top: 5px;
        }

        .mat-nav-list .mat-list-item .mat-list-item-content {
            line-height: 48px;
        }

        .activiti-filters__entry.active {
            color:  mat-color($primary);
        }

        .activiti-filters__entry.active .activiti-filters__entry-icon {
            color:  mat-color($primary);
        }

        .adf-report-card-grids {
            display: flex;
            padding: 8px;
            flex-flow: row wrap;
            margin: 0 auto;
            align-items: stretch;
        }

        .adf-report-card {
            margin: 8px;
            width: calc(33.3333333333% - 16px);
            position: relative;
            min-height: 200px;
            overflow: hidden;
            background-color: #269abc;
            display: flex;
            flex-direction: column;
            cursor: pointer;

            &-logo {
                position: absolute;
                right: 20px;
                top: 35px;
                z-index: 6;

                &-icon {
                    font-size: 70px;
                    color: #168aac;
                    width: 1em;
                    height: 1em;
                    display: inline-block;
                }
            }

            &-title {
                padding: 16px;
                z-index: 7;

                .application-title {
                    font-size: 24px;
                    margin: 0;
                }
            }

            &-content {
                padding: 16px;
                flex-grow: 1;
            }

            &-actions {
                border-top: 1px solid rgba(0,0,0,.1);
                padding: 8px;
                box-sizing: border-box;
                height: 40px;

                &-icon {
                    color: #e9f1f3;

                    &:hover {
                        color: #b7dfea;
                    }
                }
            }
        }
    }

}

